# walle_old

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: CheckCompiler.cmake  Checkheaders.cmake
include/walle/buffer/: basic_buffer.h  buffer_ref.h  stack_buffer.h
include/walle/common/: back_trace.h  config_able.h  delegate.h  dynamic_factory.h  inner_log.h  instantiator.h  sequence_write_file.h  singleton.h
include/walle/config/: base.h  bits.h
include/walle/config/detail/: compiler.h  compiler_traits.h  plateform.h
include/walle/fmt/: format.h
include/walle/format/: container.h  date_time_format.h  date_time_formatter.h  format.h  format_inl.h  numeric_string.h  ostream.h  ostream_inl.h  posix.h  printf.h  printf_inl.h  string.h  time.h  time_formatter.h
include/walle/format/detail/: bignum.h  bignum_dtoa.h  cached_powers.h  double_conversion.h  fast_dtoa.h  fixed_dtoa.h  ieee.h  simple_fp.h  strtod.h
include/walle/log/: channel.h  factory.h  formatter.h  formatter_channel.h  level.h  log_config.h  log_registry.h  logger.h  message.h  pattern_formatter.h  registry.h
include/walle/log/channel/: console_channel.h  null_channel.h  simple_file_channel.h  tee_channel.h
include/walle/math/: abs.h  clz.h  ffs.h  log2.h  math.h  power2.h
include/walle/memory/: aligned_allocator.h  allocator.h  allocator_base.h  malloc_tracker.h  manager.h  pool.h
include/walle/strings/: ascii.h  string.h  string_builder.h  string_ref.h
include/walle/sys/: condition.h  env.h  mutex.h  runable.h  shared_state.h  this_thread.h  thread.h
include/walle/sys/detail/: mutex_base.h
include/walle/time/: clock.h  date_time.h  local_date_time.h  time_zone.h  timespan.h  timestamp.h
include/walle/wsl/: algorithm.h  ascii.h  buffer_view.h  container_buffer.h  delegate.h  meta.h  skip_list.h  stack_buffer.h  string_view.h  type_traits.h  types.h
include/walle/wsl/internal/: basic_buffer.h  char_traits.h  skip_list_base.h
src/: CMakeLists.txt
src/common/: back_trace.cc  config_able.cc  sequence_write_file.cc
src/format/: bignum.cc  bignum_dtoa.cc  cached_powers.cc  date_time_format.cc  date_time_formatter.cc  double_conversion.cc  fast_dtoa.cc  fixed_dtoa.cc  numeric_string.cc  posix.cc  simple_fp.cc  strtod.cc  time_formatter.cc
src/log/: channel.cc  console_channel.cc  factory.cc  formatter.cc  formatter_channel.cc  log_registry.cc  logger.cc  message.cc  pattern_formatter.cc  registry.cc  tee_channel.cc
src/math/: log2.cc  power2.cc
src/memory/: malloc_tracker.cc  manager.cc  pool.cc
src/strings/: ascii.cc
src/sys/: condition.cc  env.cc  mutex.cc  runable.cc  this_thread.cc  thread.cc
src/time/: date_time.cc  local_date_time.cc  time_zone.cc  timespan.cc  timestamp.cc
src/wsl/: ascii.cc
test/: CMakeLists.txt
test/common/: CMakeLists.txt  test_delegate.cc
test/config/: CMakeLists.txt  compiler.cc
test/format/: CMakeLists.txt  gay_fixed.h  gay_precision.h  gay_shortest.h  gay_shortest_single.cc  gay_shortest_single.h  test_bignum.cc  test_bignum_dtoa.cc  test_conversion.cc  test_date_time.cc  test_dtoa.cc  test_fast_dtoa.cc  test_fixed_dtoa.cc  test_ieee.cc  test_simple_fp.cc  test_strtod.cc
test/log/: CMakeLists.txt  test_console_channel.cc  test_inner_log.cc
test/math/: CMakeLists.txt  test_math.cc
test/mem/: CMakeLists.txt  test_allocators.cc  test_pool.cc
test/wsl/: CMakeLists.txt  test_delegate.cc  test_sk.cc  test_stack_buffer.cc  test_string_view.cc
